--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
+  "name": "parkers-blog",
+  "version": "1.0.0",
+  "description": "A CMS-style blog site for developers to publish articles and blog posts",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "seed": "node seeds/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "seed": "node seeds/seed.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -12,6 +16,7 @@
     "express-handlebars": "^7.0.1",
     "express-session": "^1.17.3",
     "mysql2": "^3.2.3",
+    "nodemon": "^3.1.0",
     "sequelize": "^6.29.1",
     "sqlite3": "^5.1.4"
   }
