--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "parkers-blog",
+  "name": "tech-blog",
   "version": "1.0.0",
-  "description": "A CMS-style blog site for developers to publish articles and blog posts",
+  "description": "",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "seed": "node seeds/seed.js",
-    "dev": "nodemon server.js"
-  },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "connect-session-sequelize": "^7.1.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-handlebars": "^7.0.1",
-    "express-session": "^1.17.3",
-    "mysql2": "^3.2.3",
-    "nodemon": "^3.1.0",
-    "sequelize": "^6.29.1",
-    "sqlite3": "^5.1.4"
-  }
+    "bcrypt": "^5.0.0",
+    "connect-session-sequelize": "^7.0.4",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OwaisIslam/tech-blog.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/OwaisIslam/tech-blog/issues"
+  },
+  "homepage": "https://github.com/OwaisIslam/tech-blog#readme"
 }
