updated pachage json file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "dev-loop",
   "version": "1.0.0",
+  "engines": {
+    "node": "21.6.2",
+    "npm": "10.2.4"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
